fixed spacing oh h1 and logo on landing

--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@
     .hero-text h1 {
         font-size: 60px;
         margin-bottom: 50px;
-        margin-top: 100px;
+        margin-top: 10px;
     }
 
     .hero-text h2 {
